Insere artigo functional analysis, no sbcm 2009

--- a/genos.bib
+++ b/genos.bib
@@ -50,6 +50,16 @@
   keywords	= {genos}
 }
 
+@InProceedings{passos.ea09:functional,
+  author  = {Alexandre Passos and Marcos Sampaio and Pedro Kröger and
+      Givaldo de Cidra},
+  title   = {Goiaba: a software to process musical contours},
+  booktitle = {Proceedings of the 12th Brazilian Symposium on Computer Music},
+  pages   = {207--210},
+  year    = 2009,
+  address = {Recife, Brazil}
+}
+
 @Misc{passos08:modelos,
   key =       {passos08:modelos},
   author =    {Alexandre Passos},
