--- a/genos.bib
+++ b/genos.bib
@@ -53,7 +53,8 @@
 @InProceedings{passos.ea09:functional,
   author  = {Alexandre Passos and Marcos Sampaio and Pedro Kröger and
       Givaldo de Cidra},
-  title   = {Goiaba: a software to process musical contours},
+  title   = {Functional Harmonic Analysis and Computational Musicology
+      in Rameau},
   booktitle = {Proceedings of the 12th Brazilian Symposium on Computer Music},
   pages   = {207--210},
   year    = 2009,
