Arruma arquivos com script fazer.sh

--- a/genos.bib
+++ b/genos.bib
@@ -50,32 +50,35 @@
   keywords	= {genos}
 }
 
-@InProceedings{passos.ea09:functional,
-  author  = {Alexandre Passos and Marcos Sampaio and Pedro Kröger and
-      Givaldo de Cidra},
-  title   = {Functional Harmonic Analysis and Computational Musicology
-      in Rameau},
-  booktitle = {Proceedings of the 12th Brazilian Symposium on Computer Music},
-  pages   = {207--210},
-  year    = 2009,
-  address = {Recife, Brazil}
+@InProceedings{	  passos.ea09:functional,
+  author	= {Alexandre Passos and Marcos Sampaio and Pedro Kröger and
+		  Givaldo de Cidra},
+  title		= {Functional Harmonic Analysis and Computational Musicology
+		  in Rameau},
+  booktitle	= {Proceedings of the 12th Brazilian Symposium on Computer
+		  Music},
+  pages		= {207--210},
+  year		= 2009,
+  address	= {Recife, Brazil}
 }
 
-@Misc{passos08:modelos,
-  key =       {passos08:modelos},
-  author =    {Alexandre Passos},
-  title =     {Modelos de Markov Ocultos para Análise Harmônica
-                  Funcional de Música Tonal},
-  howpublished = {Monografia de Graduação defendida na Universidade
-                  Federal da Bahia},
-  month =     {Dec},
-  year =      2008}
+@Misc{		  passos08:modelos,
+  key		= {passos08:modelos},
+  author	= {Alexandre Passos},
+  title		= {Modelos de Markov Ocultos para Análise Harmônica
+		  Funcional de Música Tonal},
+  howpublished	= {Monografia de Graduação defendida na Universidade
+		  Federal da Bahia},
+  month		= {Dec},
+  year		= 2008
+}
 
-@InProceedings{sampaio.ea09:goiaba,
-  author =       {Marcos Sampaio and Pedro Kröger},
-  title =        {Goiaba: a software to process musical contours},
-  booktitle = {Proceedings of the 12th Brazilian Symposium on Computer Music},
-  pages =     {203--206},
-  year =      2009,
-  address =   {Recife, Brazil}
+@InProceedings{	  sampaio.ea09:goiaba,
+  author	= {Marcos Sampaio and Pedro Kröger},
+  title		= {Goiaba: a software to process musical contours},
+  booktitle	= {Proceedings of the 12th Brazilian Symposium on Computer
+		  Music},
+  pages		= {203--206},
+  year		= 2009,
+  address	= {Recife, Brazil}
 }
