Insere referência do reck miranda

--- a/bib.bib
+++ b/bib.bib
@@ -11242,3 +11242,11 @@
   where		= {zicarelli.pdf},
   keywords	= {computer music}
 }
+
+@Book{		  miranda01:composing,
+  author	= {Eduardo Reck Miranda},
+  title		= {Composing music with computers},
+  publisher	= {Focal Press},
+  year		= 2001,
+  keywords	= {computer music}
+}
