Insere verbete composition - grove

--- a/bib.bib
+++ b/bib.bib
@@ -11250,3 +11250,16 @@
   year		= 2001,
   keywords	= {computer music}
 }
+
+@InCollection{	  blum01:composition,
+  author	= {Stephen Blum},
+  title		= {Composition},
+  booktitle	= {The New Grove},
+  pages		= {186--201},
+  publisher	= {Macmillan Publications},
+  year		= 2001,
+  editor	= {Stanley Sadie and John Tyrrel},
+  volume	= {VI},
+  edition	= 2,
+  keywords	= {composition}
+}
