--- a/ismir.bib
+++ b/ismir.bib
@@ -10969,7 +10969,7 @@
   file		= {2004/proceedings/p087-page-478-paper243.pdf}
 }
 
-@InProceedings{,
+@InProceedings{	  ozgur07:localized,
   author	= {İzmirli, Özgür},
   title		= {Localized Key Finding from Audio Using Nonnegative Matrix
 		  Factorization for Segmentation},
