--- a/bib.bib
+++ b/bib.bib
@@ -11261,5 +11261,6 @@
   editor	= {Stanley Sadie and John Tyrrel},
   volume	= {VI},
   edition	= 2,
+  address	= {London},
   keywords	= {composition}
 }
