--- a/bib.bib
+++ b/bib.bib
@@ -11254,7 +11254,7 @@
 @InCollection{	  blum01:composition,
   author	= {Stephen Blum},
   title		= {Composition},
-  booktitle	= {The New Grove},
+  booktitle	= {The New Grove Dictionary of Music and Musicians},
   pages		= {186--201},
   publisher	= {Macmillan Publications},
   year		= 2001,
