Insere tese contornos em cognição

--- a/bib.bib
+++ b/bib.bib
@@ -11274,3 +11274,13 @@
 		  ,
   note		= "[Online; accessed 14-March-2010]"
 }
+
+@PhDThesis{	  foulkes-levy96:synthesis,
+  author	= {Laurdella Foulkes-Levy},
+  title		= {A synthesis of recent theories of tonal melody, contour,
+		  and the diatonic scale: implications for aural perception
+		  and cognition},
+  school	= {University of New York at Buffalo},
+  year		= 1996,
+  type		= {PhD diss.}
+}
