--- a/genos.bib
+++ b/genos.bib
@@ -1,84 +1,85 @@
-
 @InProceedings{	  kroger08:musicologia,
-  author	= {Pedro Kröger and Alexandre Passos and Marcos Sampaio and
-		  Givaldo de Cidra and Nathanael de Souza Ourives and Emerson
-		  Soares dos Anjos and Wallace Silva dos Santos},
-  title		= {Musicologia computacional aplicada à análise dos corais
-		  de Bach},
-  booktitle	= {Anais do XVIII Congresso da ANPPOM},
-  year		= 2008,
-  keywords	= {genos}
+  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio
+                  and Givaldo de Cidra and Nathanael de Souza Ourives
+                  and Emerson Soares dos Anjos and Wallace Silva dos
+                  Santos},
+  title =        {Musicologia computacional aplicada à análise dos
+                  corais de Bach},
+  booktitle =    {Anais do XVIII Congresso da ANPPOM},
+  year =         2008,
+  keywords =     {genos}
 }
 
 @InProceedings{	  kroger08:rameau,
-  author	= {Pedro Kröger and Alexandre Passos and Marcos Sampaio and
-		  Givaldo de Cidra},
-  title		= {Rameau: A System for Automatic Harmonic Analysis},
-  booktitle	= {Proceedings of the 2008 International Computer Music
-		  Conference},
-  pages		= {273-281},
-  year		= 2008,
-  keywords	= {genos}
+  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio
+                  and Givaldo de Cidra},
+  title =        {Rameau: A System for Automatic Harmonic Analysis},
+  booktitle =    {Proceedings of the 2008 International Computer Music
+                  Conference},
+  pages =        {273-281},
+  year =         2008,
+  keywords =     {genos}
 }
 
 @InProceedings{	  kroger.ea06:processo,
-  author	= {Pedro Kröger and Marcos di Silva and Givaldo de Cidra},
-  title		= {O processo de desenvolvimento de uma codificação para
-		  definir estruturas musicais},
-  booktitle	= {Anais do XVI Congresso da ANPPOM},
-  year		= 2006,
-  keywords	= {genos}
+  author =       {Pedro Kröger and Marcos di Silva and Givaldo de
+                  Cidra},
+  title =        {O processo de desenvolvimento de uma codificação
+                  para definir estruturas musicais},
+  booktitle =    {Anais do XVI Congresso da ANPPOM},
+  year =         2006,
+  keywords =     {genos}
 }
 
 @Unpublished{	  passos08:effect,
-  author	= {Alexandre Passos and Pedro Kröger and Marcos Sampaio and
-		  Givaldo de Cidra},
-  title		= {The effect of incorporating enharmonic information on
-		  chord labeling algorithms},
-  year		= 2008,
-  note		= {Unpublished paper available on request},
-  keywords	= {genos}
+  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio
+                  and Givaldo de Cidra},
+  title =        {The effect of incorporating enharmonic information
+                  on chord labeling algorithms},
+  year =         2008,
+  note =         {Unpublished paper available on request},
+  keywords =     {genos}
 }
 
 @Unpublished{	  passos08:evaluation,
-  author	= {Alexandre Passos and Pedro Kröger and Marcos Sampaio and
-		  Givaldo de Cidra},
-  title		= {An evaluation of some algorithms for symbolic chord
-		  labeling},
-  note		= {Unpublished paper available on request},
-  year		= 2008,
-  keywords	= {genos}
+  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio
+                  and Givaldo de Cidra},
+  title =        {An evaluation of some algorithms for symbolic chord
+                  labeling},
+  note =         {Unpublished paper available on request},
+  year =         2008,
+  keywords =     {genos}
 }
 
 @InProceedings{	  passos.ea09:functional,
-  author	= {Alexandre Passos and Marcos Sampaio and Pedro Kröger and
-		  Givaldo de Cidra},
-  title		= {Functional Harmonic Analysis and Computational Musicology
-		  in Rameau},
-  booktitle	= {Proceedings of the 12th Brazilian Symposium on Computer
-		  Music},
-  pages		= {207--210},
-  year		= 2009,
-  address	= {Recife, Brazil}
+  author =       {Alexandre Passos and Marcos Sampaio and Pedro Kröger
+                  and Givaldo de Cidra},
+  title =        {Functional Harmonic Analysis and Computational
+                  Musicology in Rameau},
+  booktitle =    {Proceedings of the 12th Brazilian Symposium on
+                  Computer Music},
+  pages =        {207--210},
+  year =         2009,
+  address =      {Recife, Brazil}
 }
 
 @Misc{		  passos08:modelos,
-  key		= {passos08:modelos},
-  author	= {Alexandre Passos},
-  title		= {Modelos de Markov Ocultos para Análise Harmônica
-		  Funcional de Música Tonal},
-  howpublished	= {Monografia de Graduação defendida na Universidade
-		  Federal da Bahia},
-  month		= {Dec},
-  year		= 2008
+  key =          {passos08:modelos},
+  author =       {Alexandre Passos},
+  title =        {Modelos de Markov Ocultos para Análise Harmônica
+                  Funcional de Música Tonal},
+  howpublished = {Monografia de Graduação defendida na Universidade
+                  Federal da Bahia},
+  month =        {Dec},
+  year =         2008
 }
 
 @InProceedings{	  sampaio.ea09:goiaba,
-  author	= {Marcos Sampaio and Pedro Kröger},
-  title		= {Goiaba: a software to process musical contours},
-  booktitle	= {Proceedings of the 12th Brazilian Symposium on Computer
-		  Music},
-  pages		= {203--206},
-  year		= 2009,
-  address	= {Recife, Brazil}
+  author =       {Marcos Sampaio and Pedro Kröger},
+  title =        {Goiaba: a software to process musical contours},
+  booktitle =    {Proceedings of the 12th Brazilian Symposium on
+                  Computer Music},
+  pages =        {203--206},
+  year =         2009,
+  address =      {Recife, Brazil}
 }
