Insere referência contorno - voz

--- a/bib.bib
+++ b/bib.bib
@@ -782,6 +782,58 @@
   keywords =     {greek music}
 }
 
+@article{     barnes-burroughs.ea07:pedagogical,
+  title =        "Pedagogical Efficiency of Melodic Contour Mapping
+                  Technology as it Relates to Vocal Timbre in Singers
+                  of Classical Music Repertoire",
+  journal =      "Journal of Voice",
+  volume =       21,
+  number =       6,
+  pages =        "689 - 698",
+  year =         2007,
+  issn =         "0892-1997",
+  doi =          "DOI: 10.1016/j.jvoice.2006.05.010",
+  url =
+                  "http://www.sciencedirect.com/science/article/B7585-4KGPPCG-1/2/16bda5526b7ede1e161a5b1a11482d3f",
+  author =       "Kathryn Barnes-Burroughs and Edward E. Anderson and
+                  Thomas Hughes and William Y. Lan and Karl Dent and
+                  Sue Arnold and Gerald Dolter and Kathy McNeil",
+  abstract =     "The purpose of this investigation was to ascertain
+                  the pedagogical viability of computer-generated
+                  melodic contour mapping systems in the classical
+                  singing studio, as perceived by their resulting
+                  effect (if any) on vocal timbre when a singer's head
+                  and neck remained in a normal singing posture. The
+                  evaluation of data gathered during the course of the
+                  study indicates that the development of consistent
+                  vocal timbre produced by the classical singing
+                  student may be enhanced through visual/kinesthetic
+                  response to melodic contour inversion mapping, as it
+                  balances the singer's perception of melodic
+                  intervals in standard musical
+                  notation. Unexpectedly, it was discovered that the
+                  system, in its natural melodic contour mode, may
+                  also be useful for teaching a student to sing a
+                  consistent legato line. The results of the study
+                  also suggest that the continued development of this
+                  new technology for the general teaching studio,
+                  designed to address standard musical notation and a
+                  singer's visual/kinesthetic response to it, may
+                  indeed be useful.",
+  keywords =     "musical contour",
+  keywords =     "Melodic contour",
+  keywords =     "Classical voice",
+  keywords =     "Timbre",
+  keywords =     "Studio technology",
+  keywords =     "Mapping systems",
+  keywords =     "Pedagogy",
+  keywords =     "Tone quality",
+  keywords =     "Notation",
+  keywords =     "Singing posture",
+  keywords =     "Visual/kinesthetic response",
+  keywords =     "Legato"
+}
+
 @Manual{	  bartetzki:cmask,
   title =        {CMask a stochastic event generator for Csound},
   author =       {Andre Bartetzki},
