Arruma e insere abstract

--- a/bib.bib
+++ b/bib.bib
@@ -4163,6 +4163,60 @@
   keywords =     {licenses}
 }
 
+@PhDThesis{	  foulkes-levy96:synthesis,
+  author =       {Laurdella Foulkes-Levy},
+  title =        {A synthesis of recent theories of tonal melody,
+                  contour, and the diatonic scale: implications for
+                  aural perception and cognition},
+  school =       {University of New York at Buffalo},
+  year =         1996,
+  type =         {PhD diss.},
+  abstract =     {This dissertation deals with the application of
+                  several recent theories of music to musicianship
+                  training.  The theories concern: (1) the
+                  hierarchical nature of tonal melody, (2) reduction
+                  techniques which reveal common tonal patterns at
+                  various levels of structure, (3) the relationship of
+                  these common patterns to theories of the diatonic
+                  system, and (4) pedagogical concepts for developing
+                  musical skills.  The theorists whose work most
+                  clearly represents each of these areas include
+                  Heinrich Schenker (tonal melody as hierarchical),
+                  Fred Lerdahl and Ray Jackendoff (rhythmic
+                  reduction), Robert Morris (contour reduction), John
+                  Clough (the diatonic system), and Erzsébet Hegyi
+                  (aural skills pedagogy).  After a presentation of
+                  the theories, commonalities and correspondences
+                  among them become the basis of a synthesis,
+                  presented as a working theory.  This working theory
+                  in turn serves as the basis for exercises and
+                  activities in aural skills training.  Musicianship
+                  training focuses primarily on features that are on
+                  the surface of the melody.  Schenkeršs theories
+                  reveal the hierarchical nature of tonal music, but
+                  deal more thoroughly with middleground and
+                  background structures.  Therefore, reduction
+                  techniques that concentrate on levels close to the
+                  surface of the melody are more important here.  Two
+                  reduction techniques are advocated: one of these
+                  selects members of a higher level through regular
+                  rhythmic patterns, the other through contour
+                  pitches.  Patterns that are revealed at various
+                  structural levels are common tonal ones consisting
+                  of scales, scale segments, triads, seventh chords,
+                  neighbor note figures, sequences, and non scalar
+                  segments of 3­5 pitches.  These patterns are
+                  referable to (ordered) diatonic segments as members
+                  of various segment classes.  A theory is devised to
+                  accomodate various classes of pitch and pitch-class
+                  segments and unordered pitch-class sets.  The
+                  patterns become the focus for aural training
+                  exercises and activities designed primarily to
+                  improve skills in ear training, sight singing,
+                  improvisation, and dictation.},
+  keyword =      {musical contour}
+}
+
 @Article{	  frantz88:composing,
   keyword =      {temperamento},
   title =        {Composing in Scaleless Space},
@@ -11586,14 +11640,4 @@
   url =
                   "\url{http://en.wikipedia.org/w/index.php?title=Top-down_and_bottom-up_design&oldid=343131469}",
   note =         "[Online; accessed 14-March-2010]"
-}
-
-@PhDThesis{	  foulkes-levy96:synthesis,
-  author =       {Laurdella Foulkes-Levy},
-  title =        {A synthesis of recent theories of tonal melody,
-                  contour, and the diatonic scale: implications for
-                  aural perception and cognition},
-  school =       {University of New York at Buffalo},
-  year =         1996,
-  type =         {PhD diss.}
 }
