--- a/bib.bib
+++ b/bib.bib
@@ -10430,6 +10430,15 @@
   keywords =     {music harmony and theory}
 }
 
+@Book{      strunk50:source,
+  author =       {W. Oliver Strunk},
+  title =        {Source Readings in Music History from Classical
+                  Antiquity Through the Romantic Era},
+  publisher =    {W. W. Norton},
+  year =         1950,
+  address =      {New York}
+}
+
 @Book{		  subira58:historia,
   title =        {Historia de la música},
   publisher =    {Salvat},
