Inserts computer musicology article

--- a/bib.bib
+++ b/bib.bib
@@ -9845,6 +9845,20 @@
   keywords =     {computer science}
 }
 
+@Article{selfridge-field96:computer,
+  author =       {Eleanor Selfridge-Field},
+  title =        {Computer Musicology: Accomplishments and Challenges},
+  publisher =    {The MIT Press},
+  journal =      {Computer Music Journal},
+  year =         1996,
+  volume =       20,
+  number =       4,
+  pages =        {29--32},
+  month =        {Winter},
+  link =         {http://www.jstor.org/stable/3680415},
+  keywords =     {computer music}
+}
+
 @InCollection{	  selfridge-field93:musedata,
   author =       {Selfridge-Field, Eleanor},
   title =        {The musedata universe: a system of musical
