Insere artigo de Babbitt

--- a/bib.bib
+++ b/bib.bib
@@ -703,6 +703,17 @@
   year =         1996
 }
 
+@Article{   babbitt58:cares,
+  author =       {Milton Babbitt},
+  title =        {{Who cares if you listen?}},
+  journal =      {High Fidelity},
+  year =         1958,
+  volume =       8,
+  number =       2,
+  pages =        {38--40},
+  keywords =     {music harmony and theory}
+}
+
 @Article{	  babbitt60:twelve-tone,
   author =       {Milton Babbitt},
   title =        {Twelve-Tone Invariants as Compositional
