Insere artigos de musicologia

--- a/bib.bib
+++ b/bib.bib
@@ -3828,6 +3828,20 @@
   year =         1994
 }
 
+@Article{   duffin88:sumer,
+  author =       {Ross W. Duffin},
+  title =        {The Sumer Canon: A New Revision},
+  journal =      {Speculum},
+  year =         1988,
+  publisher =    {Medieval Academy of America},
+  volume =       63,
+  number =       1,
+  pages =        {1--21},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/2854320}},
+  keywords =     {musicology}
+}
+
 @Article{	  duncan87:notes,
   keyword =      {temperamento},
   title =        {Notes and Commas* (letter},
@@ -4016,6 +4030,22 @@
   howpublished = {\url{http://www.jedit.org/users-guide/index.html}},
   year =         2008,
   keywords =     {programs}
+}
+
+@Article{   falck72:rondellus,
+  author =       {Robert Falck},
+  title =        {'Rondellus', Canon, and Related Types before 1300},
+  journal =      {Journal of the American Musicological Society},
+  year =         1972,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       25,
+  number =       1,
+  pages =        {38--57},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/830299}},
+  keywords =     {musicology}
 }
 
 @Article{	  fascicolo01:simulazione,
@@ -6101,6 +6131,20 @@
   volume =       1,
   pages =        0,
   year =         2006
+}
+
+@Article{   leech-wilkinson80:compositional,
+  author =       {Daniel Leech-Wilkinson},
+  title =        {Compositional Procedure in Machaut's 'Hoquetus
+                  David'},
+  journal =      {Royal Musical Association Research Chronicle},
+  year =         1980,
+  publisher =    {Royal Musical Association},
+  number =       16,
+  pages =        {99--109},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/25099356}},
+  keywords =     {musicology}
 }
 
 @Article{	  lehman00:keyboard,
