Insere ítens sobre contraponto

--- a/bib.bib
+++ b/bib.bib
@@ -4332,6 +4332,20 @@
   keywords =     {music perception}
 }
 
+@InCollection{    fuller02:organum,
+  author =       {Sarah Fuller},
+  title =        {Organum --- discantus --- contrapunctus in the
+                  Middle Ages},
+  booktitle =    {The Cambridge History of Western Music Theory},
+  pages =        {477--502},
+  publisher =    {Cambridge University Press},
+  year =         2002,
+  editor =       {Thomas Street Christensen},
+  series =       {The Cambridge history of music},
+  chapter =      15,
+  address =      {Cambridge; New York}
+}
+
 @Book{		  fux.ea71:study,
   title =        {The study of counterpoint: from Johann Joseph Fux's
                   Gradus ad parnassum},
@@ -9676,6 +9690,19 @@
   keywords =     {musical contour}
 }
 
+@InCollection{schubert02:counterpoint,
+  author =       {Peter Schubert},
+  title =        {Counterpoint pedagogy in the Reinassance},
+  booktitle =    {The Cambridge History of Western Music Theory},
+  pages =        {503--533},
+  publisher =    {Cambridge University Press},
+  year =         2002,
+  editor =       {Thomas Street Christensen},
+  series =       {The Cambridge history of music},
+  chapter =      16,
+  address =      {Cambridge; New York}
+}
+
 @Article{	  schulter00:hexachords,
   author =       {Margo Schulter},
   title =        {Hexachords, solmization, and musica ficta},
@@ -11718,4 +11745,14 @@
   url =
                   "\url{http://en.wikipedia.org/w/index.php?title=Top-down_and_bottom-up_design&oldid=343131469}",
   note =         "[Online; accessed 14-March-2010]"
+}
+
+@Book{      zarlino68:art,
+  author =       {Gioseffo Zarlino},
+  title =        {The art of counterpoint: Part Three of Le
+                  Istitutioni harmoniche, 1558},
+  publisher =    {W.W. Norton \& Company},
+  year =         1968,
+  address =      {New York},
+  note =         {Traduzido por Gui A. Marco e Claude Palisca}
 }
