--- a/bib.bib
+++ b/bib.bib
@@ -1100,6 +1100,17 @@
   keywords =     {music analysis}
 }
 
+@InCollection{bent02:isorhythm,
+  author =       {Margaret Bent},
+  title =        {Isorhythm},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {counterpoint}
+}
+
 @Book{		  berlioz.ea91:treatise-on-instrumentation,
   title =        {{Treatise on Instrumentation}},
   publisher =    {Dover Publications},
@@ -2313,6 +2324,15 @@
   number =       4,
   volume =       8,
   year =         1994
+}
+
+@Book{      cherubinid.treatise,
+  author =       {Luigi Cherubini},
+  title =        {A treatise on counterpoint and fugue.},
+  publisher =    {Kalmus},
+  year =         {s.d.},
+  address =      {New York},
+  keywords =     {counterpoint}
 }
 
 @Manual{	  chicha99:cpp,
@@ -5748,6 +5768,16 @@
   keywords =     {music history}
 }
 
+@Book{      kirnberger82:art,
+  author =       {Johann Philipp Kirnberger},
+  title =        {The art of strict musical composition},
+  publisher =    {Yale University Press},
+  year =         1982,
+  address =      {New Heaven; London},
+  note =         {Traduzido por David Beach e Jurgen Thym},
+  keyword =      {counterpoint}
+}
+
 @InBook{	  kliewer75:aspects,
   chapter =      {Melody: Linear aspects of Twentieth-century Music},
   pages =        {270--321},
@@ -6625,6 +6655,27 @@
   series =       {Prentice-Hall History of Music Series},
   address =      {Englewood Cliffs, N.J.},
   keywords =     {music history}
+}
+
+@book{      mann87:study,
+  title =        {{The study of fugue}},
+  author =       {Alfred Mann},
+  year =         1987,
+  publisher =    {Dover Publications},
+  address =      {New York},
+  keywords =     {music counterpoint}
+}
+
+@InCollection{mann.ea02:canon,
+  author =       {Alfred Mann and J. Kenneth Wilson and Peter
+                  Urquhart},
+  title =        {Canon (i)},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {counterpoint}
 }
 
 @Book{		  manning.ea08:introduction,
@@ -9054,6 +9105,15 @@
                   Music Perception and Cognition}
 }
 
+@book{rosen80:sonata,
+  title =        {{Sonata forms}},
+  author =       {Charles Rosen},
+  year =         1980,
+  publisher =    {WW Norton \& Company},
+  address =      {New York},
+  keywords =     {music harmony and theory}
+}
+
 @Article{	  rosenboom85:beginning:,
   keyword =      {temperamento},
   title =        {In the Beginning: Etude I (Trombones) * (score},
@@ -10554,6 +10614,17 @@
   address =      {Budapest}
 }
 
+@InCollection{sanders02:rondellus,
+  author =       {Ernest H. Sanders},
+  title =        {Rondellus},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {counterpoint}
+}
+
 @Article{	  takeuchi93:absolute,
   author =       {Annie H. Takeuchi and Stewart H. Hulse},
   title =        {Absolute Pitch},
@@ -11019,6 +11090,18 @@
   link =         {http://homepages.ihug.co.nz/~ray.tomes/aji.htm},
   keyword =      {temperamento ajustavel},
   file =         {tomes:automatic}
+}
+
+@InCollection{trowel02:fauxbourdon,
+  author =       {Brian Trowel},
+  title =        {Fauxbourdon [faulx bourdon; fau(l) bordon, fau(l)
+                  wordon; fauburdum]},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {counterpoint}
 }
 
 @MastersThesis{	  tsui02:harmonic,
