--- a/bib.bib
+++ b/bib.bib
@@ -11323,6 +11323,17 @@
   keywords =     {music scores}
 }
 
+@InCollection{webster02:sonata,
+  author =       {James Webster},
+  title =        {Sonata form},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  keywords =     {music harmony and theory}
+}
+
 @Misc{		  webster09:algorithm,
   key =          {Merrian Webster Online Dictionary},
   title =        {Algorithm},
@@ -11837,5 +11848,90 @@
   publisher =    {W.W. Norton \& Company},
   year =         1968,
   address =      {New York},
-  note =         {Traduzido por Gui A. Marco e Claude Palisca}
+  note =         {Traduzido por Gui A. Marco e Claude Palisca},
+  keywords =     {counterpoint}
+}
+
+@Article{gosman97:stacked,
+  author =       {Alan Gosman},
+  title =        {Stacked Canon and Renaissance Compositional
+                  Procedure},
+  journal =      {Journal of Music Theory},
+  year =         1997,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       41,
+  number =       2,
+  pages =        {289--317},
+  month =        {Autumn},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/843961}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{burn01:further,
+  author =       {David Burn},
+  title =        {Further Observations on Stacked Canon and
+                  Renaissance Compositional Procedure: Gascongne's
+                  'Ista Est Speciosa' and Forestier's 'Missa L'Homme
+                  Armé'},
+  journal =      {Journal of Music Theory},
+  year =         2001,
+  publisher =    {Duke University Press on behalf of the Yale
+                  University Department of Music},
+  volume =       45,
+  number =       1,
+  pages =        {73--118},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3090649}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{reynolds87:musical,
+  author =       {Christopher Reynolds},
+  title =        {Musical Evidence of Compositional Planning in the
+                  Renaissance: Josquin's 'Plus nulz regretz'},
+  journal =      {Journal of the American Musicological Society},
+  year =         1987,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       40,
+  number =       1,
+  pages =        {53--81},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/831582}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{brown82:emulation,
+  author =       {Howard Mayer Brown},
+  title =        {Emulation, Competition, and Homage: Imitation and
+                  Theories of Imitation in the Renaissance},
+  journal =      {Journal of the American Musicological Society},
+  year =         1982,
+  publisher =    {University of California Press on behalf of the
+                  American Musicological Society},
+  volume =       35,
+  number =       1,
+  pages =        {1--48},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/831286}},
+  keywords =     {music harmony and theory}
+}
+
+@Article{dalglish72:use,
+  author =       {William E. Dalglish},
+  title =        {The Use of Variation in Early Polyphony},
+  journal =      {Musica Disciplina},
+  year =         1972,
+  publisher =    {American Institute of Musicology Verlag
+                  Corpusmusicae, GmbH},
+  volume =       26,
+  pages =        {37--51},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/20532142}},
+  keywords =     {music harmony and theory}
 }
